# tableread

./: .buildinfo  .gitignore  .jgt_tools.index  .pre-commit-config.yaml  .travis.yml  MAINTAINER.html  MAINTAINER.rst  README.html  README.rst  bootstrap.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tableread.html
.doctrees/: MAINTAINER.doctree  README.doctree  environment.pickle  index.doctree  tableread.doctree
_modules/: collections.html  index.html  tableread.html
_modules/tableread/: writer.html
_sources/: tableread.rst.txt
sphinx_docs/: conf.py
tableread/: __init__.py  writer.py
tests/: test_reader.py  test_writer.py
