[tool.poetry]
name = "tableread"
version = "2.0.4"
description = "Table reader for simple reStructuredText tables"
authors = ["Brad Brown <brad@bradsbrown.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://jolly-good-toolbelt.github.io/tableread/"
documentation = "https://jolly-good-toolbelt.github.io/tableread/"
repository = "https://github.com/jolly-good-toolbelt/tableread"

[tool.poetry.dependencies]
python = "^3.6"
attrs = ">=16.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pre-commit = "^1.15"
flake8 = "^3.7"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-docstrings = "*"
flake8-quotes = "*"
pep8-naming = "*"
sphinx-autodoc-typehints = "^1.6"
jgt_tools = {version = "^0.2.3", extras = ["build_docs"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
