[tool.poetry]
name = "tableread"
version = "2.0.5"
description = "Table reader for simple reStructuredText tables"
authors = ["Brad Brown <brad@bradsbrown.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://jolly-good-toolbelt.github.io/tableread/"
documentation = "https://jolly-good-toolbelt.github.io/tableread/"
repository = "https://github.com/jolly-good-toolbelt/tableread"

[tool.poetry.dependencies]
python = "^3.6"
attrs = ">=16.0.0"

[tool.poetry.dev-dependencies]
sphinx-autodoc-typehints = "^1.6"
jgt_tools = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
